4.13.1 (unreleased)
-------------------

- Nothing changed yet.


4.13.0 (2017-07-18)
-------------------

- Updated to concrete 4.13 schema.


4.12.10 (2017-06-27)
--------------------

- Breaking change: update concrete-inspect.py to support multiple
  annotations of the same type.  Changes CoNLL output for an annotation
  type that is not present: an empty column is no longer printed.

- Refactor concrete.inspect to use annotation filter callbacks to select
  annotations rather than tool names, as tool names no longer uniquely
  identify an annotation.  The new filter_annotations function can be
  used to create simple filters; that functionality is exposed in
  concrete-inspect.py.

- Add timestamp_to_datetime in concrete.util.metadata

- Add optional gzip compression to CommunicationWriter

- Print situation mention kind and intensity in concrete.inspect


4.12.9 (2017-05-13)
-------------------

- Clean up sphinx doc: suppress thrift_spec fields, render
  comments from Thrift verbatim

- Update help for concrete-inspect.py --annotation-headers
  (and a few other help messages)

- Add --other-tag option to concrete-inspect.py to enable CoNLL output
  of arbitrary token tags

- Move get_tokenizations from concrete.inspect to
  concrete.util.tokenization

- Added PropertyLists to situation-mentions output of
  concrete-inspect.py

- Fix concrete2json TJSONProtocol UTF-8 bug


4.12.8 (2017-02-27)
-------------------

- Store tweet JSON in Communication.originalText.

- Expand/modify functionality of fetch-client.py:
    - Accept communication IDs on standard input
    - Write results to tar.gz archive

- Expand functionality of search-client.py:
    - Accept search terms as command-line arguments
    - Populate SearchQuery.rawQuery field
    - Add command-line flags --about, --alive, --capabilities, --corpora

- Add child mentions to "concrete-inspect.py --entities" output.

- concrete.util.simple_comm.create_sentence now sets Token.textSpan field
