@@ -1,0 +1,7 @@
+concrete.util.summarization_wrapper module
+==========================================
+
+.. automodule:: concrete.util.summarization_wrapper
+    :members:
+    :undoc-members:
+    :show-inheritance:
